argocd/hiae/prd/manifests/apps/app-frontend-suporte/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-frontend-suporte
  name: app-frontend-suporte
  namespace: apps-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend-suporte
  template:
    metadata:
      labels:
        app: app-frontend-suporte
    spec:
      restartPolicy: Always
      containers:
        - image: 264221247403.dkr.ecr.sa-east-1.amazonaws.com/app-frontend-suporte:3acffa
          imagePullPolicy: IfNotPresent
          name: app-frontend-suporte-app
          ports:
          - containerPort: 3000
            protocol: TCP
