argocd/hiae/prd/manifests/apps/app-frontend-suporte/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-frontend-suporte
  namespace: apps-app-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
spec:
  tls:
    - hosts:
        - suporte.hoobox.einstein.br
      secretName: app-frontend-suporte-tls
  rules:
  - host: suporte.hoobox.einstein.br
    http:
      paths:
      - backend:
          service:
            name: app-frontend-suporte-apps
            port:
              number: 80
        path: /
        pathType: Prefix
